--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ nav> ul > li > a{
 .actions > a{
 
     color:#025157;
-    position:absolute; top:30px; right:115px;
+    position:absolute; top:30px; right:100px;
     font-size: 16;
     font-weight: bold;
 }
@@ -91,6 +91,7 @@ a{
     border:0;
     border-radius: 5px;
     padding: 14px;
+    margin-left: 30px;
 }
 
 
@@ -283,3 +284,149 @@ section > article > .intro{
     }
    
 }
+body {
+    font-family: 'IBM Plex Sans',Arial,sans-serif;
+    font-weight: 400;
+    font-weight: 400;
+    font-size: 18px;
+    color: #4a4a4a;
+    background-color: #fff;
+  }
+  
+  .sectFeatures{
+    text-align: center;
+  }
+  
+  .container2{
+    display: block;
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+
+
+  }
+  
+  .row{
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+  
+  .sectionHeader{
+      display: block;
+    margin-bottom: 40px;
+    margin-top: 40px;
+  }
+  .sectionHeader > p {
+
+    margin-top: 30px;
+  }
+  
+  .headerAlt{
+    font-size: 55px;
+    color: #025157;
+    letter-spacing: -3px;
+    font-family: vesterbroextrabold,Arial,sans-serif;
+    font-weight: 400!important;
+    margin-bottom: -10px;
+  }
+  
+  .features{
+    /* display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-auto-rows: minmax(100px, auto);
+    gap:50px;
+    height: 500px;
+    width: 75%;
+    /* background-color: whitesmoke; */
+    /* margin-right: auto;
+    margin-left: auto; */ 
+    display: flex;
+    justify-content: space-around;
+
+
+  }
+  
+  article > img{
+    height: 277px;
+    width: 415px;
+    overflow: hidden;
+    border-radius: 9px;
+    display: inline-block;
+    border: 1px solid #dadada;
+    box-shadow: 0 8px 24px rgba(0,0,0,.1);
+    margin-bottom: 10px;
+    /* width: 80%; */
+  }
+  
+  .featureTitle{
+    font-weight: 500;
+    font-size: 24px;
+    font-family: 'IBM Plex Sans',Arial,sans-serif;
+    margin-bottom: 20px;
+  }
+  
+  .featureTitleAnchor{
+    text-decoration: none;
+    color: #343434;
+    transition: all .2s ease-in-out;
+  }
+
+  
+  @media (max-width: 575px) {
+    .features{
+      display: grid;
+      grid-template-columns: repeat(1,1fr);
+      grid-auto-rows: minmax(auto, auto);
+      height: 500px;
+      width: 100%;
+      position: relative;
+      /* background-color: whitesmoke; */
+    }
+  
+    .row{
+      margin-right: 0px;
+      margin-left: 0px;
+    }
+  
+    .container{
+      width: 100%;
+      padding-right: 0px;
+      padding-left: 0px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+  
+    .headerAlt{
+      font-size: 55px;
+      color: #025157;
+      letter-spacing: -3px;
+      font-family: vesterbroextrabold,Arial,sans-serif;
+      font-weight: 400!important;
+      margin-bottom: -10px;
+    }
+  }
+  
+  @media (max-width: 991px) {
+    .features{
+      display: grid;
+      grid-template-columns: repeat(1,1fr);
+      grid-auto-rows: minmax(auto, auto);
+      height: 500px;
+      width: 100%;
+      position: relative;
+      /* background-color: whitesmoke; */
+    }
+  
+    .row{
+      margin-right: 0px;
+      margin-left: 0px;
+    }
+  
+    .container{
+      width: 100%;
+      padding-right: 0px;
+      padding-left: 0px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+  }
