--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -430,7 +429,31 @@ body {
       margin-right: auto;
       margin-left: auto;
     }
+    
+    .tools{
+
+        margin-top: 750px;
+        /* display: block; */
+   
+    }
+    .apartados{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    /* grid-auto-rows: minmax(100px, auto); */
+    gap:50px;
+    height: 500px;
+    width: 100%;
+    /* background-color: whitesmoke; */
+    /* margin-right: auto;
+    margin-left: auto; */
+    }
   }
+
+
+
+
+
+
   .container3{
 
     display: flex;
